<?xml version="1.0"?>
<package format="3">
  <name>livox_interfaces2</name>
  <version>0.0.1</version>
  <description>Livox ROS 2 message definitions extracted from livox_ros_driver2</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>